# bbn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ideas.txt
src/: chunk.c  chunk.h  debug.c  debug.h  main.c  memory.c  memory.h  value.c  value.h
